[workspace]

members = [
    "day_1",
    "day_1-2",
    "day_2",
    "day_2-2",
    "day_3",
    "day_3-2",
    "day_4",
    "day_4-2",
    "day_5",
    "day_5-2",
    "day_6",
    "day_6-2",
    "day_7",
    "day_7-2",
    "day_8",
    "day_8-2",
    "day_9",
    "day_9-2",
    "day_10",
    "day_10-2",
]

